[gd_scene load_steps=3 format=3 uid="uid://vcyq2fbg0dts"]

[ext_resource type="Script" uid="uid://d32jo3c2mqyam" path="res://scripts/menus/ZM_Hud.gd" id="1_633jc"]
[ext_resource type="Texture2D" uid="uid://dwp1uqi51ytw3" path="res://textures/crosshair.png" id="2_rglhv"]

[node name="Hud" type="Control" node_paths=PackedStringArray("health_bar", "crosshair")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_633jc")
health_bar = NodePath("GameHud/HealthBar")
crosshair = NodePath("GameHud/CenterContainer/Crosshair")

[node name="GameHud" type="AspectRatioContainer" parent="."]
process_mode = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HealthBar" type="ProgressBar" parent="GameHud"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 8
value = 25.0
show_percentage = false

[node name="Label" type="Label" parent="GameHud/HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Health"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="GameHud"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Crosshair" type="TextureRect" parent="GameHud/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_rglhv")
stretch_mode = 3

[node name="StartMenu" type="AspectRatioContainer" parent="."]
process_mode = 2
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="StartMenu"]
layout_mode = 2
theme_override_constants/margin_top = 64
theme_override_constants/margin_bottom = 64

[node name="VFlowContainer" type="VFlowContainer" parent="StartMenu/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/v_separation = 16
alignment = 1

[node name="Label" type="Label" parent="StartMenu/MarginContainer/VFlowContainer"]
layout_mode = 2
text = "Zombie Game"

[node name="NewGame" type="Button" parent="StartMenu/MarginContainer/VFlowContainer"]
layout_mode = 2
text = "New Game"

[node name="LoadGame" type="Button" parent="StartMenu/MarginContainer/VFlowContainer"]
layout_mode = 2
text = "Load Game"

[node name="Exit" type="Button" parent="StartMenu/MarginContainer/VFlowContainer"]
layout_mode = 2
text = "Exit"

[node name="PauseMenu" type="AspectRatioContainer" parent="."]
process_mode = 2
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu"]
layout_mode = 2
theme_override_constants/margin_top = 64
theme_override_constants/margin_bottom = 64

[node name="VFlowContainer" type="VFlowContainer" parent="PauseMenu/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/v_separation = 16
alignment = 1

[node name="Resume" type="Button" parent="PauseMenu/MarginContainer/VFlowContainer"]
layout_mode = 2
text = "Resume"

[node name="SaveGame" type="Button" parent="PauseMenu/MarginContainer/VFlowContainer"]
layout_mode = 2
text = "Save Game"

[node name="LoadGame" type="Button" parent="PauseMenu/MarginContainer/VFlowContainer"]
layout_mode = 2
text = "Load Game"

[node name="Exit" type="Button" parent="PauseMenu/MarginContainer/VFlowContainer"]
layout_mode = 2
text = "Exit"

[node name="LoadMenu" type="AspectRatioContainer" parent="."]
process_mode = 2
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="LoadMenu"]
layout_mode = 2
theme_override_constants/margin_top = 64
theme_override_constants/margin_bottom = 64

[node name="VFlowContainer" type="VFlowContainer" parent="LoadMenu/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/v_separation = 16
alignment = 1

[node name="Save1" type="Button" parent="LoadMenu/MarginContainer/VFlowContainer"]
layout_mode = 2
text = "Save 1"

[node name="Save2" type="Button" parent="LoadMenu/MarginContainer/VFlowContainer"]
layout_mode = 2
text = "Save 2"

[node name="Save3" type="Button" parent="LoadMenu/MarginContainer/VFlowContainer"]
layout_mode = 2
text = "Save 3"

[node name="Back" type="Button" parent="LoadMenu/MarginContainer/VFlowContainer"]
layout_mode = 2
text = "Back"

[node name="SaveMenu" type="AspectRatioContainer" parent="."]
process_mode = 2
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="SaveMenu"]
layout_mode = 2
theme_override_constants/margin_top = 64
theme_override_constants/margin_bottom = 64

[node name="VFlowContainer" type="VFlowContainer" parent="SaveMenu/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/v_separation = 16
alignment = 1

[node name="NewSave" type="Button" parent="SaveMenu/MarginContainer/VFlowContainer"]
layout_mode = 2
text = "New Save"

[node name="Save2" type="Button" parent="SaveMenu/MarginContainer/VFlowContainer"]
layout_mode = 2
text = "Save 2"

[node name="Save3" type="Button" parent="SaveMenu/MarginContainer/VFlowContainer"]
layout_mode = 2
text = "Save 3"

[node name="Back" type="Button" parent="SaveMenu/MarginContainer/VFlowContainer"]
layout_mode = 2
text = "Back"

[node name="GameOverMenu" type="AspectRatioContainer" parent="."]
process_mode = 2
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="GameOverMenu"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_top = 64
theme_override_constants/margin_bottom = 64

[node name="VFlowContainer" type="VFlowContainer" parent="GameOverMenu/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/v_separation = 16
alignment = 1

[node name="Label" type="Label" parent="GameOverMenu/MarginContainer/VFlowContainer"]
layout_mode = 2
text = "Game Over"

[node name="NewGame" type="Button" parent="GameOverMenu/MarginContainer/VFlowContainer"]
layout_mode = 2
text = "New Game"

[node name="Exit" type="Button" parent="GameOverMenu/MarginContainer/VFlowContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="StartMenu/MarginContainer/VFlowContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="StartMenu/MarginContainer/VFlowContainer/LoadGame" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="StartMenu/MarginContainer/VFlowContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="PauseMenu/MarginContainer/VFlowContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenu/MarginContainer/VFlowContainer/SaveGame" to="." method="_on_save_game_pressed"]
[connection signal="pressed" from="PauseMenu/MarginContainer/VFlowContainer/LoadGame" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="PauseMenu/MarginContainer/VFlowContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="LoadMenu/MarginContainer/VFlowContainer/Save1" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="LoadMenu/MarginContainer/VFlowContainer/Save2" to="." method="_on_save_game_pressed"]
[connection signal="pressed" from="LoadMenu/MarginContainer/VFlowContainer/Save3" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="LoadMenu/MarginContainer/VFlowContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="SaveMenu/MarginContainer/VFlowContainer/NewSave" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="SaveMenu/MarginContainer/VFlowContainer/Save2" to="." method="_on_save_game_pressed"]
[connection signal="pressed" from="SaveMenu/MarginContainer/VFlowContainer/Save3" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="SaveMenu/MarginContainer/VFlowContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="GameOverMenu/MarginContainer/VFlowContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="GameOverMenu/MarginContainer/VFlowContainer/Exit" to="." method="_on_exit_pressed"]
